syntax = "proto3";

package config.v1;

option go_package = "./api/config/v1";

service Config{
  // 根据 code 获取一个 配置信息
  rpc GetByCode(GetByCodeReq) returns (GetByCodeRes);
}

message GetByCodeReq {
  // 配置编码，如 token_validity_period
  string configCode = 1; // v:required#配置编码不能为空
}

message GetByCodeRes {
  // 配置值，如 60
  string configValue = 1;
}